# planetoid

./: .gitignore  CMakeCache.txt  CMakeLists.txt  EDAN35_Assignment_2.sln  EDAN35_Assignment_2.vcxproj  EDAN35_Assignment_2.vcxproj.filters  Makefile  cmake_install.cmake  config.hpp  imgui.ini  imgui_CMakeLists.txt  log.txt
glfw/lib/: libglfw.so.3.1
glfw/lib/cmake/glfw/: glfwTargets.cmake
glfw/lib/pkgconfig/: glfw3.pc
glfw/tmp/: glfw-cfgcmd.txt  glfw-gitclone.cmake  glfw-gitupdate.cmake
imgui/tmp/: imgui-cfgcmd.txt  imgui-gitclone.cmake
res/crysponza/: sponza.mtl
shaders/: ArrayToMs.frag  MsToArray.frag  Simple.frag  Simple.vert  SimpleSprite.frag  SimpleSprite.vert  SimpleTextured.frag  SimpleTextured.vert  SimpleTexturedArray.frag  SimpleTexturedMS.frag  accumulate_lights.frag  accumulate_lights.vert  cubes.frag  cubes.geo  cubes.vert  default.frag  default.vert  fill_gbuffer.frag  fill_gbuffer.vert  fill_shadowmap.frag  fill_shadowmap.vert  resolve_deferred.frag  resolve_deferred.vert
src/: AABox.h  AABox.inl  Bonobo.cpp  Bonobo.h  BuildSettings.h  Cone.h  Deferred.cpp  Deferred.h  FPSCamera.h  FPSCamera.inl  GLB.cpp  GLB.h  GLBdecl.cpp  GLBdecl.h  GLDataFormats.inl  GLStateInspection.cpp  GLStateInspection.h  GLStateInspectionView.cpp  GLStateInspectionView.h  GLTextureFormats.inl  Geometry.h  Hierarchy.h  Hierarchy.inl  InputHandler.cpp  InputHandler.h  LazyInclude.h  Log.cpp  Log.h  LogView.cpp  LogView.h  Main.cpp  Misc.cpp  Misc.h  ObjReader.cpp  ObjReader.h  PerlinNoise.cpp  PerlinNoise.h  Profiler.cpp  Profiler.h  ProfilerView.cpp  (+24 more)
